tests/custom/STARIS_2022/basic/multiset-operators/hist-type-error/stderr.expected
Error:
    hist-type-error.essence:3:20:
  |
3 | such that h = hist(s)
  |                    ^
Type error:
	Expected: "Matrix, List or MSet"
	Got: set of int

cat: *.solution: No such file or directory
